# thetis-skin-maker

./: LICENSE  common.h  image.c  image.cpp  main.c  meson.build  preview.c  resources.h  resources.rc  thetisskinmaker.h  win32skinmaker.xml  window.c  x86_64-w64-mingw32.txt
